----------------------------------------------------------------
Released 2.4.28 2016-11-xx

Changes since 2.4.27:

Lib/
* added dummy method logging_file_class.flush() because
  LDAPObject.unbind_ext_s() invokes it

----------------------------------------------------------------
Released 2.4.27 2016-08-01

Changes since 2.4.26:

Lib/
* added 'strf_secs' and 'strp_secs' to ldap.functions.__all__
* fixed regression introduced with 2.4.26:
  ldif.LDIFParser did not fully parse LDIF records without trailing empty
  separator line

----------------------------------------------------------------
Released 2.4.26 2016-07-24

Changes since 2.4.25:

Installation:
* added ldap.controls.sss to py_modules in setup.py

Lib/
* LDAPObject.unbind_ext() now removes class attribute
  LDAPObject._l to completely invalidate C wrapper object
* LDAPObject.unbind_ext() now flushes trace file
* ldap.ldapobject.SimpleLDAPObject:
  added convenience methods read_rootdse_s() and get_naming_contexts()
* added functions ldap.strf_secs() and ldap.strp_secs()
* added function ldap.filter.time_span_filter()
* Refactored ldif.LDIFParser
  * ldif.LDIFParser.version ís now Integer
  * ignore multiple empty lines between records
* Fixed ldap.dn.is_dn()

Modules/
* Fixed #69 Segmentation fault on whoami_s after unbind
  (thanks to Christian Heimes and Petr Viktorin)

Tests/
* Fixed result3() being used instead of correct result4()
  (see #66, thanks to David D. Riddle)
* Tests/slapd.py honors env var $TMP instead of just using
  hard-coded /var/tmp
* Tests/slapd.py now expects schema to be in /etc/openldap/
* Tests/t_ldapurl.py now independent of module ldap
* Tests/t_ldif.py now has more test-cases including change records
* added some more test scripts for sub-modules ldap.dn, ldap.filter and
  ldap.functions (not complete yet)

----------------------------------------------------------------
Released 2.4.25 2016-01-18

Changes since 2.4.23: